ASM-2825 Refactor: Apply consistent formatting and remove unnecessary comments across the codebase