@@ -1,43 +1,39 @@
 package uk.gov.companieshouse.servicesdashboardapi.service.deptrack;
 
+import com.fasterxml.jackson.core.type.TypeReference;
+import jakarta.annotation.PostConstruct;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.http.HttpEntity;
+import org.springframework.http.HttpMethod;
+import org.springframework.http.ResponseEntity;
+import org.springframework.stereotype.Service;
+import uk.gov.companieshouse.servicesdashboardapi.model.deptrack.DepTrackProjectInfo;
+import uk.gov.companieshouse.servicesdashboardapi.service.DepTrackGetDataService;
+import uk.gov.companieshouse.servicesdashboardapi.utils.ApiLogger;
+import uk.gov.companieshouse.servicesdashboardapi.utils.CustomJsonMapper;
+
 import java.io.IOException;
 import java.util.AbstractMap;
-import java.util.Map;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-
-import com.fasterxml.jackson.core.type.TypeReference;
-
-import jakarta.annotation.PostConstruct;
-
-import org.springframework.stereotype.Service;
-import org.springframework.http.HttpEntity;
-import org.springframework.http.HttpMethod;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.http.ResponseEntity;
-
-import uk.gov.companieshouse.servicesdashboardapi.model.deptrack.DepTrackProjectInfo;
-import uk.gov.companieshouse.servicesdashboardapi.utils.ApiLogger;
-import uk.gov.companieshouse.servicesdashboardapi.service.DepTrackGetDataService;
-
-import uk.gov.companieshouse.servicesdashboardapi.utils.CustomJsonMapper;
+import java.util.Map;
 
 @Service
-public class GetAllProjects extends DepTrackGetDataService <List<DepTrackProjectInfo>>{
+public class GetAllProjects extends DepTrackGetDataService<List<DepTrackProjectInfo>> {
 
-   @Value("${dt.server.endpoint.proj}")
-   String endPointValue;
+    @Value("${dt.server.endpoint.proj}")
+    String endPointValue;
 
-   @Value("${dt.server.header.totcount}")
-   String headerTotalCount;
+    @Value("${dt.server.header.totcount}")
+    String headerTotalCount;
 
     @Autowired
     private CustomJsonMapper jsonMapper;
 
-    public GetAllProjects()  {
+    public GetAllProjects() {
         super(null); // Pass a placeholder value, will be overwritten in init method
     }
 
@@ -49,45 +45,46 @@ public class GetAllProjects extends DepTrackGetDataService <List<DepTrackProject
 
     @Override
     public List<DepTrackProjectInfo> fetch() {
-      ApiLogger.debug("fetching ...");
-      List<DepTrackProjectInfo> allProjects = new ArrayList<>();
-      int offset = 0;
-      int totalCount = 0;
+        ApiLogger.debug("fetching ...");
+        List<DepTrackProjectInfo> allProjects = new ArrayList<>();
+        int offset = 0;
+        int totalCount = 0;
 
-      // Set the headers
-      HttpEntity<String> headers = this.setHeaders(Collections.emptyList());
+        // Set the headers
+        HttpEntity<String> headers = this.setHeaders(Collections.emptyList());
 
-      List<Map.Entry<String, String>> queryParams = new ArrayList<>(Arrays.asList(
-            new AbstractMap.SimpleEntry<>("offset", "")
+        List<Map.Entry<String, String>> queryParams = new ArrayList<>(List.of(
+                new AbstractMap.SimpleEntry<>("offset", "")
         ));
 
-      do {
-         queryParams.get(0).setValue(String.valueOf(offset));
-         String uri = this.setUri(queryParams);
+        do {
+            queryParams.get(0).setValue(String.valueOf(offset));
+            String uri = this.setUri(queryParams);
 
-         // Make the GET request with headers
-         ResponseEntity<String> response = restTemplate.exchange(uri, HttpMethod.GET, headers, String.class);
+            // Make the GET request with headers
+            ResponseEntity<String> response = restTemplate.exchange(uri, HttpMethod.GET, headers, String.class);
 
-         List<DepTrackProjectInfo> result;
-         ApiLogger.debug(".....SENDING REQ - offset="+offset);
-         try {
-               result = jsonMapper.readValue(response.getBody(), new TypeReference<List<DepTrackProjectInfo>>() {});
-         } catch (IOException e) {
-               e.printStackTrace();
-               ApiLogger.debug("Failed to parse Dependency Track JSON response");
-               result = Collections.emptyList();
-         }
-         allProjects.addAll(result);
+            List<DepTrackProjectInfo> result;
+            ApiLogger.debug(".....SENDING REQ - offset=" + offset);
+            try {
+                result = jsonMapper.readValue(response.getBody(), new TypeReference<List<DepTrackProjectInfo>>() {
+                });
+            } catch (IOException e) {
+                e.printStackTrace();
+                ApiLogger.debug("Failed to parse Dependency Track JSON response");
+                result = Collections.emptyList();
+            }
+            allProjects.addAll(result);
 
-         // Get the total count from the response headers
-         if (totalCount == 0 && response.getHeaders().containsKey(headerTotalCount)) {
-               totalCount = Integer.parseInt(response.getHeaders().get(headerTotalCount).get(0));
-         }
+            // Get the total count from the response headers
+            if (totalCount == 0 && response.getHeaders().containsKey(headerTotalCount)) {
+                totalCount = Integer.parseInt(response.getHeaders().get(headerTotalCount).get(0));
+            }
 
-         offset += result.size();
+            offset += result.size();
 
-      } while (offset < totalCount);
+        } while (offset < totalCount);
 
-      return allProjects;
-   }
+        return allProjects;
+    }
 }
